Do not use MethodHandle's